local --> server modify redux's logic #5 #2

--- a/front_end/public/index.html
+++ b/front_end/public/index.html
@@ -12,7 +12,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
   
-  <title>React App</title>
+  <title>부동산 매물 시세 확인</title>
   <style type="text/css" >
 
     .wrap-loading{ /*화면 전체를 어둡게 합니다.*/
